modification du descriptif des cartes

--- a/Web/src/pages/Carte.html
+++ b/Web/src/pages/Carte.html
@@ -26,7 +26,7 @@
             <img src="../asset/Image/PhotoCartes1.png" alt="Phot cartes 1">
         </div>
         <div class="DescriptifCartes">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque error ad voluptate, doloribus voluptates recusandae enim accusamus beatae incidunt quam ratione provident sunt debitis quas est unde deserunt neque et?</p>
+            <p class="TextDescriptifCartes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque error ad voluptate, doloribus voluptates recusandae enim accusamus beatae incidunt quam ratione provident sunt debitis quas est unde deserunt neque et?</p>
         </div>
     </div>
     <div Class="Cartes">
@@ -35,7 +35,7 @@
             <img src="../asset/Image/PhotoCartes2.png" alt="Photo cartes 2">
         </div>
         <div class="DescriptifCartes">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque error ad voluptate, doloribus voluptates recusandae enim accusamus beatae incidunt quam ratione provident sunt debitis quas est unde deserunt neque et?</p>
+            <p class="TextDescriptifCartes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque error ad voluptate, doloribus voluptates recusandae enim accusamus beatae incidunt quam ratione provident sunt debitis quas est unde deserunt neque et?</p>
         </div>
     </div>
     <div Class="Cartes">
@@ -44,7 +44,7 @@
             <img src="../asset/Image/PhotoCartes3.png" alt="Photo cartes 3">
         </div>
         <div class="DescriptifCartes">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque error ad voluptate, doloribus voluptates recusandae enim accusamus beatae incidunt quam ratione provident sunt debitis quas est unde deserunt neque et?</p>
+            <p class="TextDescriptifCartes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque error ad voluptate, doloribus voluptates recusandae enim accusamus beatae incidunt quam ratione provident sunt debitis quas est unde deserunt neque et?</p>
         </div>
     </div>
     <div Class="Cartes">
@@ -53,7 +53,7 @@
             <img src="../asset/Image/PhotoCartes4.png" alt="Photo cartes 4">
         </div>
         <div class="DescriptifCartes">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque error ad voluptate, doloribus voluptates recusandae enim accusamus beatae incidunt quam ratione provident sunt debitis quas est unde deserunt neque et?</p>
+            <p class="TextDescriptifCartes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque error ad voluptate, doloribus voluptates recusandae enim accusamus beatae incidunt quam ratione provident sunt debitis quas est unde deserunt neque et?</p>
         </div>
     </div>
     <div Class="Cartes">
@@ -62,7 +62,7 @@
             <img src="../asset/Image/PhotoCartes5.png" alt="Photo cartes 5">
         </div>
         <div class="DescriptifCartes">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque error ad voluptate, doloribus voluptates recusandae enim accusamus beatae incidunt quam ratione provident sunt debitis quas est unde deserunt neque et?</p>
+            <p class="TextDescriptifCartes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque error ad voluptate, doloribus voluptates recusandae enim accusamus beatae incidunt quam ratione provident sunt debitis quas est unde deserunt neque et?</p>
         </div>
     </div>
     </div>
